# epub-editor

./: .gitignore  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 32znfarzi621wmvmxg634zh5rvsfcpyd-source  drcknswwnqpdffhscqic9drpqrwj736j-source  mbfv9vc14qqlb679jhjchhn3a8saansb-source
.github/workflows/: rust.yml
.zed/: settings.json
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/components/: TipTap.svelte
frontend/src/routes/: +page.svelte
src-tauri/: Cargo.toml  Tauri.toml  rust-toolchain.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: content.rs  metadata.rs  mod.rs
